# cbor4dns

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: test.yml
cbor2_dns/: __init__.py  encode.py  trie.py
cbor4dns/: decode.py  encode.py  utils.py
tests/: test_decode.py  test_encode.py  test_trie.py  test_utils.py
