[project]
name = "cbor4dns"
dynamic = ["dependencies", "version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["cbor4dns"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "cbor4dns.__version__"}

[tool.coverage.run]
omit = ["dist/*", "docs/*", "env/*", "build/*", "*.egg"]

[tool.codespell]
skip = '*.bib,*.egg,./.git,./.tox,./build,./dist,./docs/_build,./env,./.pytest_cache,./tests'

[tool.flake8]
max-line-length = 88
ignore = "E203,W503"
exclude = ".tox,build,dist,docs,env,*.egg"

[tool.pylint]
max-line-length = 88

[tool.pytest.ini_options]
addopts = """-v --junit-xml=test-report.xml
          --doctest-modules
          --cov=cbor4dns --cov=tests --cov-branch
          --cov-report=term-missing --cov-report=xml"""
testpaths = "tests"
norecursedirs = "docs/*"
